# jarvis

./: .env.example  .env.tpl  .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  ROADMAP.md  TEST-REPORT.md  docker-compose.yml  e2e-skills-test.js  e2e-test.js  install.ps1  package-lock.json  pyproject.toml  start.sh  stop.sh  test-all.sh
.github/workflows/: ci.yml
athena/: .goreleaser.yaml  CONTRIBUTING.md  DOCS.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  setup.sh
athena/.claude-plugin/: marketplace.json
athena/.github/ISSUE_TEMPLATE/: bug_report.md
athena/api/: openapi.yaml
athena/cmd/engram/: main.go
athena/cmd/jarvis/: main.go  main_test.go
athena/cmd/mnemo/: main.go  main_extra_test.go  main_test.go
athena/internal/athena/: builtin.go  builtin_test.go  fetch.go  fetch_test.go  filesystem.go  filesystem_test.go  jobs.go  jobs_test.go  pathvalidation.go  pathvalidation_test.go  shell.go  shell_test.go  tool.go  tool_test.go  tracing.go  tracing_test.go  websearch.go  websearch_test.go
athena/internal/atlas/: integration_test.go  loader.go  loader_test.go  registry.go  registry_test.go  schema.go  schema_test.go
athena/internal/cloud/: config.go  config_test.go  integration_test.go
athena/internal/gateway/: channel.go  discord.go  discord_commands.go  discord_intents.go  discord_intents_test.go  discord_test.go  format.go  format_test.go  gateway.go  gateway_test.go  progress.go  progress_test.go  webchannel.go  webchannel_test.go
athena/scripts/: audit-logging.sh
athena/skills/: catalog.md
config/: HEARTBEAT.md  IDENTITY.md  SOUL.md  registry.json  system-prompt.md
config/scripts/: scan-server.sh
config/skills/: delegation.md  server-guardrails.md  server-knowledge.md  task-management.md
docs/: design-gateway-multichannel.md  prompt-optimization-report.md
hermes/: .env.tpl  Dockerfile  docker-compose.yml  go.mod
nexus/: Dockerfile  package-lock.json  package.json
prometheus/: bridge.js  package-lock.json  package.json  prometheus-bridge.service
scripts/: backup-offsite.sh  backup-postgres.sh  refresh-api-key.sh  restore-postgres.sh  smoke_test.py
src/jarvis/: __init__.py  __main__.py  config.py  logging.py
tests/: conftest.py  test_config.py  test_logging.py
tests/audio/: test_capture.py  test_playback.py  test_vad.py  test_wake_word.py
tests/llm/: test_base.py  test_chatgpt_provider.py  test_claude_provider.py  test_qwen_provider.py  test_router.py
tests/pipeline/: test_main_loop.py
tests/setup/: test_detectors.py  test_env_writer.py
tests/stt/: test_whisper_stt.py
tests/tools/: test_router.py  test_system_info.py
tests/tts/: test_kokoro_tts.py
tests/tui/: test_events.py  test_headless.py  test_log_buffer.py
(+258 files in other folders)
