[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS — Personal AI voice assistant with multi-LLM support and tool execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Miguel Aguiar", email = "miguel.santiesteban.aguiar@gmail.com" }]

dependencies = [
    "faster-whisper>=1.1.0",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
    "openwakeword>=0.4.0",
    "silero-vad>=5.1",
    "numpy>=2.0.2",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
# PyAudio requires portaudio system library.
# On Windows: pip installs pre-built wheel automatically.
# On Linux: requires `apt install portaudio19-dev` or equivalent before install.
audio = [
    "pyaudio>=0.2.14",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests requiring real hardware or services",
    "slow: marks tests that take >5s",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["jarvis"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "openwakeword.*",
    "pyaudio.*",
    "kokoro_onnx.*",
    "silero_vad.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["jarvis"]
omit = [
    "tests/*",
    "src/jarvis/__main__.py",          # Entry point, tested via integration
    "src/jarvis/llm/auth/oauth_pkce.py",  # Requires browser, tested via integration
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]
